...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qr_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:layout_width="364dp"
        android:layout_height="48dp"
        android:layout_marginTop="427dp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/username_text_field"
        android:ems="10"
...
